# Master_Thesis_AUV_SLM

./: README.md  fine_tune_flant5base.ipynb  test_flant5base.ipynb
PoC/: actions.py  build_dataset_PoC.py  chat.py  command.json  environment.py  executor.py  operations.py  state.py  status.json  system.py  t5base_planner.py
PoC/flan-t5-base_planner_PoC/: README.md  adapter_config.json  tokenizer_config.json
mm_bt/: CMakeLists.txt  package.xml
mm_bt/config/: RAMI_area_1.world  RAMI_area_1.yaml  mission_memory.yaml  mission_objects.yaml  missions.yaml  zeno_params.yaml
mm_bt/config/rviz/: buoy.stl  compass_rose.stl  mesh_zeno.stl  zeno_visualization.rviz
mm_bt/include/mm_bt/: mission_visualizer.h  perceive_world.h  rviz_util.h  zeno_model.h
mm_bt/launch/: mmbt.launch  mmbt_joystick.launch  mmbt_old.launch  mmbt_playbag.launch  tlm2ros.launch  tlm2ros_old.launch
mm_bt/logs/: mission_logs.yaml
mm_bt/scripts/: activate_system.sh  send_mission.sh
mm_bt/src/: logs_listener.py  mission_visualizer.cpp  perceive_world.cpp  tlm2ros_bridge.py  zeno_model.cpp
tlm2ros/: build_dataset.py  build_dataset_small.py  chat.py  command.json  experiments_log.txt  latency_measurements.csv  latency_statistics.json  logs_processor.py  manager.py  mission_history.yaml  mission_logs.yaml  mission_logs_example.yaml  mission_memory.yaml  missions.yaml  planner.py  resource_monitor.py  resource_usage.json  ros_connection.py  status.json
tlm2ros/flan-t5-base_planner/: adapter_config.json  adapter_model.safetensorsZone.Identifier
